Fix eslint errors, use our eslint config

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:watch": "jest --watch",
-    "test:lint": "eslint . --ignore-path .gitignore --cache",
+    "test:lint": "node_modules/.bin/eslint ./src --ignore-path .gitignore --cache",
     "gh-pages": "webpack --env ghPages",
-    "gh-pages:deploy": "gh-pages -d gh-pages",
+    "gh-pages:deploy": "gh-pages -d docs",
     "gh-pages:stats": "webpack --env ghPages --profile --json > stats.json",
     "dist": "webpack --env dist",
     "dist:es6": "rimraf ./dist-es6 && BABEL_ENV=es6 babel ./src --out-dir ./dist-es6",
@@ -41,7 +41,7 @@
     "css-loader": "^0.28.4",
     "enzyme": "^2.9.1",
     "eslint": "^4.1.1",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-frack": "^0.10.6",
     "eslint-loader": "^1.8.0",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-jsx-a11y": "^6.0.0",
@@ -53,13 +53,17 @@
     "git-prepush-hook": "^1.0.2",
     "html-webpack-plugin": "^2.29.0",
     "html-webpack-template": "^6.0.1",
+    "htmlparser2": "^3.9.2",
     "jest": "^20.0.4",
     "json-loader": "^0.5.4",
+    "prop-types": "^15.5.10",
     "purecss": "^1.0.0",
     "raw-loader": "^0.5.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-github-corner": "^0.3.0",
+    "react-test-renderer": "^15.6.1",
+    "regexp-quote": "^0.0.0",
     "rimraf": "^2.6.1",
     "style-loader": "^0.18.2",
     "sync-exec": "^0.6.2",
@@ -68,10 +72,6 @@
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-merge": "^4.1.0",
-    "htmlparser2": "^3.9.2",
-    "prop-types": "^15.5.10",
-    "react-test-renderer": "^15.6.1",
-    "regexp-quote": "^0.0.0",
     "xtend": "^4.0.1"
   },
   "peerDependencies": {
