--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-htmlcontent",
-  "version": "0.0.0",
+  "version": "1.0.0-0",
   "description": "React HTMLContent Component",
   "repository": {
     "type": "git",
