--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,21 @@
 {
-  "presets": [["env", {target: {browsers: ["IE 11", "last 2 versions", "> 4%"]}}], "react"]
+  "presets": [
+    "stage-0",
+    [
+      "env",
+      {
+        "target": {
+          "browsers": [
+            "IE 11",
+            "last 2 versions",
+            "> 4%"
+          ]
+        }
+      }
+    ],
+    "react"
+  ],
+  "plugins": [
+    "transform-object-rest-spread"
+  ]
 }
