--- a/package.json
+++ b/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "react-htmlcontent",
-  "version": "1.0.0",
-  "description": "React HTMLContent Component",
-  "repository": {
-    "type": "git",
-    "url": "https://git.siteone.cz/frack/react-htmlcontent.git"
-  },
-  "license": "MIT",
-  "scripts": {
-    "prepublish": ". ./.scripts/prepublish.sh",
-    "lint": "eslint src",
-    "lintfix": "eslint src --fix",
-    "testonly": "mocha --require .scripts/mocha_runner src/**/tests/**/*.js",
-    "test": "npm run lint && npm run testonly",
-    "test-watch": "npm run testonly -- --watch --watch-extensions js",
-    "storybook": "start-storybook -p 6006",
-    "publish-storybook": "bash .scripts/publish_storybook.sh",
-    "build-storybook": "build-storybook"
-  },
-  "devDependencies": {
-    "@storybook/react": "^3.1.9",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-stage-0": "^6.24.1",
-    "chai": "^3.5.0",
-    "enzyme": "^2.2.0",
-    "eslint": "^4.2.0",
-    "eslint-config-frack": "^0.10.9",
-    "git-url-parse": "^6.0.1",
-    "jsdom": "^9.5.0",
-    "mocha": "^3.0.2",
-    "react": "^15.3.2",
-    "react-addons-test-utils": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "sinon": "^1.17.6"
-  },
-  "peerDependencies": {
-    "react": "^0.14.7 || ^15.0.0"
-  },
-  "dependencies": {
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-runtime": "^6.11.6",
-    "jest": "^20.0.4"
-  },
-  "main": "dist/index.js",
-  "engines": {
-    "npm": "^3.0.0"
-  }
+	"name": "react-htmlcontent",
+	"version": "1.0.0",
+	"description": "React HTMLContent Component",
+	"repository": {
+		"type": "git",
+		"url": "https://git.siteone.cz/frack/react-htmlcontent.git"
+	},
+	"license": "MIT",
+	"scripts": {
+		"prepublish": ". ./.scripts/prepublish.sh",
+		"lint": "eslint src",
+		"lintfix": "eslint src --fix",
+		"testonly": "mocha --require .scripts/mocha_runner src/**/tests/**/*.js",
+		"test": "npm run lint && npm run testonly",
+		"test-watch": "npm run testonly -- --watch --watch-extensions js",
+		"storybook": "start-storybook -p 6006",
+		"publish-storybook": "bash .scripts/publish_storybook.sh",
+		"build-storybook": "build-storybook"
+	},
+	"devDependencies": {
+		"@storybook/react": "^3.1.9",
+		"babel-cli": "^6.14.0",
+		"babel-core": "^6.14.0",
+		"babel-eslint": "^6.1.2",
+		"babel-loader": "^6.2.5",
+		"babel-plugin-transform-object-rest-spread": "^6.23.0",
+		"babel-plugin-transform-runtime": "^6.15.0",
+		"babel-polyfill": "^6.13.0",
+		"babel-preset-env": "^1.6.0",
+		"babel-preset-react": "^6.24.1",
+		"babel-preset-stage-0": "^6.24.1",
+		"babel-runtime": "^6.11.6",
+		"chai": "^3.5.0",
+		"enzyme": "^2.2.0",
+		"eslint": "^4.2.0",
+		"eslint-config-frack": "^0.10.9",
+		"git-url-parse": "^6.0.1",
+		"jest": "^20.0.4",
+		"jsdom": "^9.5.0",
+		"mocha": "^3.0.2",
+		"react": "^15.3.2",
+		"react-addons-test-utils": "^15.3.2",
+		"react-dom": "^15.3.2",
+		"sinon": "^1.17.6"
+	},
+	"peerDependencies": {
+		"react": "^0.14.7 || ^15.0.0"
+	},
+	"dependencies": {
+		"compose": "^0.1.2"
+	},
+	"main": "dist/index.js",
+	"engines": {
+		"npm": "^3.0.0"
+	}
 }
