--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"prepublish": ". ./.scripts/prepublish.sh",
 		"lint": "eslint src",
 		"lintfix": "eslint src --fix",
-		"testonly": "mocha --require .scripts/mocha_runner src/**/tests/**/*.js",
+		"testonly": "mocha --require .scripts/mocha_runner ./test/**/*.js",
 		"test": "npm run lint && npm run testonly",
 		"test-watch": "npm run testonly -- --watch --watch-extensions js",
 		"storybook": "start-storybook -p 6006",
@@ -47,9 +47,7 @@
 	"peerDependencies": {
 		"react": "^0.14.7 || ^15.0.0"
 	},
-	"dependencies": {
-		"compose": "^0.1.2"
-	},
+	"dependencies": {},
 	"main": "dist/index.js",
 	"engines": {
 		"npm": "^3.0.0"
