--- a/package.json
+++ b/package.json
@@ -19,33 +19,33 @@
 		"build-storybook": "build-storybook"
 	},
 	"devDependencies": {
-		"@storybook/react": "^3.1.9",
-		"babel-cli": "^6.14.0",
-		"babel-core": "^6.14.0",
-		"babel-eslint": "^6.1.2",
-		"babel-loader": "^6.2.5",
-		"babel-plugin-transform-object-rest-spread": "^6.23.0",
-		"babel-plugin-transform-runtime": "^6.15.0",
-		"babel-polyfill": "^6.13.0",
+		"@storybook/react": "^3.2.8",
+		"babel-cli": "^6.26.0",
+		"babel-core": "^6.26.0",
+		"babel-eslint": "^7.2.3",
+		"babel-loader": "^7.1.2",
+		"babel-plugin-transform-object-rest-spread": "^6.26.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-polyfill": "^6.26.0",
 		"babel-preset-env": "^1.6.0",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
-		"babel-runtime": "^6.11.6",
-		"chai": "^3.5.0",
-		"enzyme": "^2.2.0",
-		"eslint": "^4.2.0",
+		"babel-runtime": "^6.26.0",
+		"chai": "^4.1.1",
+		"enzyme": "^2.9.1",
+		"eslint": "^4.5.0",
 		"eslint-config-frack": "^0.10.9",
-		"git-url-parse": "^6.0.1",
+		"git-url-parse": "^7.0.0",
 		"jest": "^20.0.4",
-		"jsdom": "^9.5.0",
-		"mocha": "^3.0.2",
-		"react": "^15.3.2",
-		"react-addons-test-utils": "^15.3.2",
-		"react-dom": "^15.3.2",
-		"sinon": "^1.17.6"
+		"jsdom": "^11.2.0",
+		"mocha": "^3.5.0",
+		"react": "^15.6.1",
+		"react-addons-test-utils": "^15.6.0",
+		"react-dom": "^15.6.1",
+		"sinon": "^3.2.1"
 	},
 	"peerDependencies": {
-		"react": "^0.14.7 || ^15.0.0"
+		"react": "^15.6.1"
 	},
 	"dependencies": {},
 	"main": "dist/index.js",
